Update index.html change johne dou to mojibul

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <header style="text-align: center; padding: 20px;">
         <img src="profile.jpg" alt="Profile Picture" width="100" height="100">
-        <h1>John Doe</h1>
+        <h1>Mojibul Hoque</h1>
         <p>Web Developer | Programmer | Problem Solver</p>
     </header>
 
